--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="content">
               <div class="quiz" id="quiz2">
                 <h3>2: After completing his studies in economics and environmental studies, Seth Chanin commenced an internship at a renewable energy finance company.<br><br> What eventually became his job description?</h3><br>
-                <div><input type="radio" name="Question2" value="A" required> a. a. Published a scientific research paper on the effects of environmental policies and business decisions.<br><br>
+                <div><input type="radio" name="Question2" value="A" required> a. Published a scientific research paper on the effects of environmental policies and business decisions.<br><br>
                   <input type="radio" name="Question2" value="B" required> b. Led a team of 5.<br><br>
                   <input type="radio" name="Question2" value="C" required> c. Spent half of his time analyzing spreadsheets.<br><br>
                   <input type="radio" name="Question2" value="D" required> d. Conducted research on alternative fuel use.<br>
